--- a/.config/i3/config
+++ b/.config/i3/config
@@ -187,8 +187,8 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-	mode hide
-	hidden_state hide
-}
+#bar {
+#        status_command i3status
+#	mode hide
+#	hidden_state hide
+#}
