Synaptics config changes

--- a/70-synaptics.conf
+++ b/70-synaptics.conf
@@ -13,10 +13,16 @@ Section "InputClass"
         Option "CircScrollTrigger" "2"
         Option "EmulateTwoFingerMinZ" "40"
         Option "EmulateTwoFingerMinW" "8"
-        Option "CoastingSpeed" "0"
+        Option "CoastingSpeed" "20"
         Option "FingerLow" "30"
         Option "FingerHigh" "50"
         Option "MaxTapTime" "125"
-        Option      "VertScrollDelta"          "-111"
-        Option      "HorizScrollDelta"         "-111"
+
+        Option      "VertScrollDelta"          "-40"
+        Option      "HorizScrollDelta"         "-40"
+        Option "MinSpeed" "1"
+        Option "MaxSpeed" "10"
+        Option "PalmDetect" "on"
+        Option "PalmMinZ" "50"
+        Option "PalmMinWidth" "4"
 EndSection
