--- a/.config/i3/config
+++ b/.config/i3/config
@@ -21,7 +21,7 @@ bindsym $mod+b exec i3lock
 bindsym XF86MonBrightnessUp exec echo '55000' > /sys/class/backlight/intel_backlight/brightness
 bindsym XF86MonBrightnessDown exec echo '25000' > /sys/class/backlight/intel_backlight/brightness
 bindsym $mod+m exec xrandr --output DP2 --auto
-bindsym --release $mod+q exec scrot -s '/tmp/screenshot.png' -e 'xclip -selection clipboard -target image/png -i /tmp/screenshot.png'
+bindsym --release $mod+q exec scrot -s '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f && rm $f'
 
 set $mod Mod4
 
