--- a/.i3/config
+++ b/.i3/config
@@ -141,10 +141,10 @@ bindsym $mod+Ctrl+Left workspace prev
 # to display names or symbols instead of plain workspace numbers you can use
 # something like: set $ws1 1:mail
 #                 set $ws2 2:
-set $ws1 1
-set $ws2 2
-set $ws3 3
-set $ws4 4
+set $ws1 1_browser
+set $ws2 2_slack
+set $ws3 3_idea
+set $ws4 4_terminal
 set $ws5 5
 set $ws6 6
 set $ws7 7
