Add display handling

--- a/.i3/config
+++ b/.i3/config
@@ -421,6 +421,7 @@ exec_always "setxkbmap -layout us,ru"
 exec_always "setxkbmap -option 'grp:caps_toggle'"
 exec_always xrandr --output eDP-1 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-1 --mode 1920x1080 --pos 0x0 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off
 
+#xrandr --output eDP-1 --off --output HDMI-1 --primary --mode 2560x1440 --pos 0x0 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off
 exec "slack"
 exec "firefox"
 
