--- a/.i3/config
+++ b/.i3/config
@@ -143,7 +143,7 @@ set $ws2 2:TERMINALS 
 set $ws3 3:IDEA  
 set $ws4 4:MISC  
 set $ws5 5:TELEGRAM 
-set $ws6 6
+set $ws6 6:OBSIDIAN
 set $ws7 7
 set $ws8 8:SLACK 
 
@@ -184,6 +184,7 @@ assign [class="jetbrains-idea"] $ws3
 assign [class="pritunl"] $ws4
 assign [class="KeePassXC"] $ws4
 assign [class="TelegramDesktop"] $ws5
+assign [class="obsidian"] $ws6
 assign [class="Slack"] $ws8
 
 # Open specific applications in floating mode
@@ -423,5 +424,4 @@ exec_always xrandr --output eDP-1 --primary --mode 1920x1080 --pos 0x0 --rotate 
 
 #xrandr --output eDP-1 --off --output HDMI-1 --primary --mode 2560x1440 --pos 0x0 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off
 exec "slack"
-exec "firefox"
 
