--- a/.i3/config
+++ b/.i3/config
@@ -143,7 +143,7 @@ set $ws2 2:TERMINALS 
 set $ws3 3:IDEA  
 set $ws4 4:MISC  
 set $ws5 5:TELEGRAM 
-set $ws6 6:OBSIDIAN
+set $ws6 6:OBSIDIAN 
 set $ws7 7
 set $ws8 8:SLACK 
 
