--- a/.i3/config
+++ b/.i3/config
@@ -424,4 +424,5 @@ exec_always xrandr --output eDP-1 --primary --mode 1920x1080 --pos 0x0 --rotate 
 
 #xrandr --output eDP-1 --off --output HDMI-1 --primary --mode 2560x1440 --pos 0x0 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off
 exec "slack"
+exec "blueman-applet"
 
