--- a/.i3/config
+++ b/.i3/config
@@ -340,11 +340,11 @@ bar {
         separator  #454947
 
 #                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
+        focused_workspace  #F9FAF9 #92d17b #292F34
         active_workspace   #595B5B #353836 #FDF6E3
         inactive_workspace #595B5B #222D31 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+        binding_mode       #92d17b #2C2C2C #F9FAF9
+        urgent_workspace   #92d17b #FDF6E3 #E5201D
     }
 }
 
