--- a/.i3/config
+++ b/.i3/config
@@ -141,11 +141,11 @@ bindsym $mod+Ctrl+Left workspace prev
 set $ws1 1:BROWSER 
 set $ws2 2:TERMINALS 
 set $ws3 3:IDEA 
-set $ws4 4:MISC 
-set $ws5 5:TELEGRAM 
-set $ws6 6:OBSIDIAN 
+set $ws4 4:SLACK  
+set $ws5 5:MISC 
+set $ws6 6:PERSONAL  
 set $ws7 7
-set $ws8 8:SLACK 
+set $ws8 8
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -181,11 +181,12 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 assign [class="Google-chrome"] $ws1
 assign [class="firefox"] $ws1
 assign [class="jetbrains-idea"] $ws3
-assign [class="pritunl"] $ws4
-assign [class="KeePassXC"] $ws4
-assign [class="TelegramDesktop"] $ws5
+assign [class="Slack"] $ws4
+assign [class="KeePassXC"] $ws5
+assign [class="pritunl"] $ws5
+assign [class="TelegramDesktop"] $ws6
 assign [class="obsidian"] $ws6
-assign [class="Slack"] $ws8
+assign [class="steam"] $ws7
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
